add break points

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <nav id="nav_header">
                         <ul>
                             <li><a href="#accomodation_section">Hébergements</a></li>
-                            <li><a href="#activity">Activités</a></li>
+                            <li><a href="#activity_section">Activités</a></li>
                             <li><a href="#"><strong>S'inscrire</strong></a></li>
                         </ul>
                     </nav>
