--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 </div>
                 
                 <nav id="nav-mobile">
-                    <div id="accomodation_activity">
-                        <a href="#accomodation_section">Hébergements</a>
-                        <a href="#activity">Activités</a> 
+                    <div id="accomodation-activity">
+                        <a href="#accomodation-section">Hébergements</a>
+                        <a href="#activity-section">Activités</a> 
                     </div>  
                 </nav>
 
@@ -46,8 +46,8 @@
                     <i class="fas fa-map-marker-alt"></i>
 
                     <form>
-                        <input type="text" name="research" id="research_button" placeholder="Marseille, France"/> 
-                        <input type="button" value="Rechercher" id="clic_research"/>
+                        <input type="text" name="research" id="research-button" placeholder="Marseille, France"/> 
+                        <input type="button" value="Rechercher" id="clic-research"/>
                         <i class="fas fa-search"></i>
                     </form>
                 </div>
