--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     </head>
 
     <body>
-        <div id="container">
-            
+        <div id="container">     
             <header>
                 <div id="header-nav">
                     <div id="logo">
@@ -242,7 +241,7 @@
                                     <img class="popular_image cover-image" src="images/hebergements/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout bleu et Blanc"/>
                                     <div class="popular_description">
                                         <div class="popular_title">
-                                            <h3>Hôtel Tout bleu et tout Blanc</h3>
+                                            <h3>Hôtel Tout bleu et Blanc</h3>
                                             <p>Nuit à partir de 68€</p>
                                         </div>
                                         <div class="popular_star">
