--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                             <i class="fas fa-chart-line"></i>
                         </div>
     
-                        <div>
+                        <div id="popular-content">
                             <a href="#">
                                 <div class="popular-accomodation popular-accomodation-border">
                                     <img class="popular_image cover-image" src="images/hebergements/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin"/>
