--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="fontawesome-free-5.15.1-web/css/all.css" rel="stylesheet">
         <link href="stylesheet.css" rel="stylesheet">
+        <link href="mediaqueries.css" rel="stylesheet">
         <title>Reservia</title>
     </head>
 
@@ -333,7 +334,6 @@
                     <p>Nous contacter</p>
                 </div>
             </footer>
-        
         </div>
 
     </body>
